[package]
name = "fenwick_tree"
version = "0.1.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
system_test_tool = { path = "../system_test_tool" }
procon_reader = { path = "../procon_reader" }