[package]
name = "oj_test"
version = "0.1.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
glob = "0.3.0"
log = "=0.4.18" # 0.4.19 だと Rust 1.60 が要求されるので Rust 1.42 で動く 0.4.18 にしておく
env_logger = "0.9.0"
