[package]
name = "fenwick_tree"
version = "0.1.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.7"
proconio = {version = "0.4.5", features = ["derive"] }
join = { path = "../../others/join" }
