[package]
name = "lowest_common_ancestor"
version = "0.1.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ceil_log2 = { path = "../ceil_log2" }

[dev-dependencies]
proconio = {version = "0.3.4", features = ["derive"] }
