[package]
name = "mod_int"
version = "0.1.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext_gcd = { path = "../ext_gcd" }

[dev-dependencies]
rand = "0.7"
