[package]
name = "mod_int"
version = "0.1.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext_gcd = { path = "../../algo/ext_gcd" }

[dev-dependencies]
rand = "0.7"
