[package]
name = "scanner_proc_macro"
version = "0.1.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.86", features = ["full"] }
quote = "1.0.15"
scanner = { path = "../scanner" }
