[package]
name = "bundle"
version = "0.1.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2024"
license = "CC0-1.0"

[[bin]]
name = "bundle-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
