[package]
name = "oj_test"
version = "0.1.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2024"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
glob = "0.3.0"
log = "0.4.19"
env_logger = "0.9.0"
clap = { version = "3.2", features = ["derive"] }
chrono = "0.3"
chrono-tz = "0.3"
